Remove use of AutomaticFeature